feat: Improve SEO for homepage
Add comprehensive meta tags for title, description, keywords, author, robots, canonical URL, Open Graph (Facebook), and Twitter. This enhances search engine visibility and social sharing previews for the Dragon Suppliers homepage.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dragon Suppliers | Wholesale Liquor Nepal</title>
+    
+    <!-- Primary SEO -->
+    <title>Dragon Suppliers | Wholesale Liquor & Spirits Distribution Nepal</title>
+    <meta name="title" content="Dragon Suppliers | Wholesale Liquor & Spirits Distribution Nepal">
+    <meta name="description" content="Dragon Suppliers is Nepal's premier wholesale liquor distributor. Providing a secure official merchant portal for spirits, wine, and beverage procurement for businesses across Nepal.">
+    <meta name="keywords" content="Dragon Suppliers Nepal, Wholesale Liquor Kathmandu, Spirits Distributor Nepal, Liquor Wholesale, B2B Liquor Nepal">
+    <meta name="author" content="Dragon Suppliers">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://dragonsuppliers.com.np">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dragonsuppliers.com.np">
+    <meta property="og:title" content="Dragon Suppliers | Official Merchant Portal">
+    <meta property="og:description" content="Nepal's premier wholesale liquor distribution platform. Quality spirits, efficient delivery, and dedicated merchant support.">
+    <meta property="og:image" content="https://dragonsuppliers.com.np/og-image.jpg"> <!-- Replace with your actual logo URL -->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://dragonsuppliers.com.np">
+    <meta property="twitter:title" content="Dragon Suppliers | Wholesale Liquor Nepal">
+    <meta property="twitter:description" content="Nepal's premier wholesale liquor distribution platform. Official merchant portal for B2B procurement.">
+    <meta property="twitter:image" content="https://dragonsuppliers.com.np/og-image.jpg">
+
+    <!-- JSON-LD Structured Data for Google -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WholesaleStore",
+      "name": "Dragon Suppliers",
+      "alternateName": "Dragon Suppliers Nepal",
+      "description": "Premium wholesale liquor and spirits distribution platform in Nepal.",
+      "url": "https://dragonsuppliers.com.np",
+      "logo": "https://dragonsuppliers.com.np/logo.png",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Kathmandu",
+        "addressCountry": "NP"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "sales",
+        "areaServed": "NP",
+        "availableLanguage": ["en", "ne"]
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://dragonsuppliers.com.np/?s={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -29,6 +81,20 @@
         }
         body {
             background-color: #020617;
+        }
+        /* Custom scrollbar for better UX */
+        ::-webkit-scrollbar {
+          width: 8px;
+        }
+        ::-webkit-scrollbar-track {
+          background: #0f172a;
+        }
+        ::-webkit-scrollbar-thumb {
+          background: #334155;
+          border-radius: 10px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+          background: #dc2626;
         }
     </style>
 <script type="importmap">
